--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,15 +27,19 @@ dist.dir=dist
 dist.jar=${dist.dir}/OJDBC.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.hamcrest-all-1.3.jar=D:\\Documents\\Job\\testing\\hamcrest-all-1.3.jar
 file.reference.hamcrest-all-1.3.zip=F:\\Kerja MII\\Java Class\\hamcrest-all-1.3.zip
+file.reference.junit-4.13.jar=D:\\Documents\\Job\\testing\\junit-4.13.jar
 file.reference.junit-4.13.zip=F:\\Kerja MII\\Java Class\\junit-4.13.zip
 file.reference.ojdbc7.jar=F:\\Kerja MII\\ojdbc7.jar
+file.reference.ojdbc7.jar-1=D:\\Documents\\Job\\_bootcamp 33\\_java\\ojdbc7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.ojdbc7.jar}:\
     ${file.reference.junit-4.13.zip}:\
-    ${file.reference.hamcrest-all-1.3.zip}
+    ${file.reference.hamcrest-all-1.3.zip}:\
+    ${file.reference.ojdbc7.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -46,7 +50,9 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.hamcrest-all-1.3.jar}:\
+    ${file.reference.junit-4.13.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
