--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,20 +27,21 @@ dist.dir=dist
 dist.jar=${dist.dir}/OJDBC.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.hamcrest-all-1.3.jar=C:\\Users\\Insane\\Downloads\\hamcrest-all-1.3.jar
+file.reference.hamcrest-all-1.3.jar=D:\\Bootcamp Mii\\hamcrest-all-1.3.jar
 file.reference.hamcrest-all-1.3.zip=F:\\Kerja MII\\Java Class\\hamcrest-all-1.3.zip
-file.reference.junit-4.13.jar=C:\\Users\\Insane\\Downloads\\junit-4.13.jar
+file.reference.junit-4.13.jar=D:\\Bootcamp Mii\\junit-4.13.jar
 file.reference.junit-4.13.zip=F:\\Kerja MII\\Java Class\\junit-4.13.zip
 file.reference.ojdbc7.jar=F:\\Kerja MII\\ojdbc7.jar
-file.reference.ojdbc7.jar-1=C:\\Users\\Insane\\Downloads\\ojdbc7.jar
+file.reference.ojdbc7.jar-1=D:\\master\\ojdbc7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.ojdbc7.jar}:\
     ${file.reference.junit-4.13.zip}:\
     ${file.reference.hamcrest-all-1.3.zip}:\
-    ${file.reference.ojdbc7.jar-1}:\
     ${file.reference.hamcrest-all-1.3.jar}:\
+    ${file.reference.ojdbc7.jar-1}:\
+    ${libs.junit_4.classpath}:\
     ${file.reference.junit-4.13.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
