--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,14 +28,20 @@ dist.jar=${dist.dir}/OJDBC.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.hamcrest-all-1.3.zip=F:\\Kerja MII\\Java Class\\hamcrest-all-1.3.zip
+file.reference.hamcrest-all-1.3__1_.jar=E:\\program\\Master Bootcamp - Java\\hamcrest-all-1.3 (1).jar
 file.reference.junit-4.13.zip=F:\\Kerja MII\\Java Class\\junit-4.13.zip
+file.reference.junit-4.13__1_.jar=E:\\program\\Master Bootcamp - Java\\junit-4.13 (1).jar
 file.reference.ojdbc7.jar=F:\\Kerja MII\\ojdbc7.jar
+file.reference.ojdbc7.jar-1=E:\\program\\Master Bootcamp - Java\\ojdbc7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.ojdbc7.jar}:\
     ${file.reference.junit-4.13.zip}:\
-    ${file.reference.hamcrest-all-1.3.zip}
+    ${file.reference.hamcrest-all-1.3.zip}:\
+    ${file.reference.junit-4.13__1_.jar}:\
+    ${file.reference.ojdbc7.jar-1}:\
+    ${file.reference.hamcrest-all-1.3__1_.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
