--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,8 @@
 #Mon Jan 20 20:28:36 ICT 2020
 excludes=
+file.reference.hamcrest-all-1.3.jar-1=D:\\Bootcamp Mii\\hamcrest-all-1.3.jar
+file.reference.junit-4.13.jar-1=D:\\Bootcamp Mii\\junit-4.13.jar
+file.reference.ojdbc7.jar-2=D:\\Bootcamp Mii\\ojdbc7.jar
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
 run.classpath=${javac.classpath}\:${build.classes.dir}
@@ -80,7 +83,13 @@ file.reference.ojdbc7.jar=F\:\\Kerja MII\\ojdbc7.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 src.dir=src
 mkdist.disabled=false
-javac.classpath=${file.reference.ojdbc7.jar}\:${file.reference.junit-4.13.zip}\:${file.reference.hamcrest-all-1.3.zip}
+javac.classpath=\
+    ${file.reference.ojdbc7.jar}:\
+    ${file.reference.junit-4.13.zip}:\
+    ${file.reference.hamcrest-all-1.3.zip}:\
+    ${file.reference.hamcrest-all-1.3.jar-1}:\
+    ${file.reference.junit-4.13.jar-1}:\
+    ${file.reference.ojdbc7.jar-2}
 annotation.processing.enabled.in.editor=false
 file.reference.hamcrest-all-1.3.zip=F\:\\Kerja MII\\Java Class\\hamcrest-all-1.3.zip
 build.generated.sources.dir=${build.dir}/generated-sources
