--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,19 +27,29 @@ dist.dir=dist
 dist.jar=${dist.dir}/OJDBC.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.DateChooser.jar=D:\\Master Bootcamp - Java\\DateChooser.jar
 file.reference.hamcrest-all-1.3.jar=D:\\Documents\\Job\\testing\\hamcrest-all-1.3.jar
+file.reference.hamcrest-all-1.3.jar-1=D:\\Master Bootcamp - Java\\hamcrest-all-1.3.jar
 file.reference.hamcrest-all-1.3.zip=F:\\Kerja MII\\Java Class\\hamcrest-all-1.3.zip
+file.reference.jcalendar-1.4.jar=D:\\Master Bootcamp - Java\\jcalendar-1.4.jar
 file.reference.junit-4.13.jar=D:\\Documents\\Job\\testing\\junit-4.13.jar
+file.reference.junit-4.13.jar-1=D:\\Master Bootcamp - Java\\junit-4.13.jar
 file.reference.junit-4.13.zip=F:\\Kerja MII\\Java Class\\junit-4.13.zip
 file.reference.ojdbc7.jar=F:\\Kerja MII\\ojdbc7.jar
 file.reference.ojdbc7.jar-1=D:\\Documents\\Job\\_bootcamp 33\\_java\\ojdbc7.jar
+file.reference.ojdbc7.jar-2=D:\\Master Bootcamp - Java\\ojdbc7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.ojdbc7.jar}:\
     ${file.reference.junit-4.13.zip}:\
     ${file.reference.hamcrest-all-1.3.zip}:\
-    ${file.reference.ojdbc7.jar-1}
+    ${file.reference.ojdbc7.jar-1}:\
+    ${file.reference.DateChooser.jar}:\
+    ${file.reference.hamcrest-all-1.3.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.junit-4.13.jar-1}:\
+    ${file.reference.ojdbc7.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
