--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ file.reference.junit-4.13.zip=F:\\Kerja MII\\Java Class\\junit-4.13.zip
 file.reference.ojdbc7.jar=F:\\Kerja MII\\ojdbc7.jar
 file.reference.ojdbc7.jar-1=D:\\METRO DATA\\Bootcamp\\Tugas_6\\ojdbc7.jar
 file.reference.ojdbc7.jar-2=E:\\kuliah\\semester kerja\\MII\\ojdbc7.jar
+file.reference.PlaceHolder.jar=E:\\kuliah\\semester kerja\\MII\\Bootcamp\\PlaceHolder.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -47,7 +48,8 @@ javac.classpath=\
     ${file.reference.hamcrest-all-1.3.jar}:\
     ${file.reference.hamcrest-all-1.3.jar-1}:\
     ${file.reference.junit-4.13.jar-1}:\
-    ${file.reference.ojdbc7.jar-2}
+    ${file.reference.ojdbc7.jar-2}:\
+    ${file.reference.PlaceHolder.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
