--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,54 +1,60 @@
-#Mon Jan 20 20:28:36 ICT 2020
-excludes=
-file.reference.hamcrest-all-1.3.jar-1=D:\\Bootcamp Mii\\hamcrest-all-1.3.jar
-file.reference.junit-4.13.jar-1=D:\\Bootcamp Mii\\junit-4.13.jar
-file.reference.ojdbc7.jar-2=D:\\Bootcamp Mii\\ojdbc7.jar
-javac.deprecation=false
-build.test.results.dir=${build.dir}/test/results
-run.classpath=${javac.classpath}\:${build.classes.dir}
-javadoc.nonavbar=false
-javac.external.vm=true
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
-annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-javac.processorpath=${javac.classpath}
-javac.target=1.8
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
-javadoc.noindex=false
-javadoc.additionalparam=
-includes=**
+annotation.processing.run.all.processors=true
+annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 build.classes.dir=${build.dir}/classes
-source.encoding=UTF-8
-javadoc.author=false
-test.src.dir=test
+build.classes.excludes=**/*.java,**/*.form
+# This directory is removed when the project is cleaned:
 build.dir=build
-build.test.classes.dir=${build.dir}/test/classes
-platform.active=default_platform
-javac.compilerargs=
-main.class=tools.OJDBC
-dist.jar=${dist.dir}/OJDBC.jar
-javac.test.processorpath=${javac.test.classpath}
-javadoc.use=true
-dist.archive.excludes=
+build.generated.dir=${build.dir}/generated
+build.generated.sources.dir=${build.dir}/generated-sources
+# Only compile against the classpath explicitly listed here:
 build.sysclasspath=ignore
-debug.test.classpath=${run.test.classpath}
+build.test.classes.dir=${build.dir}/test/classes
+build.test.results.dir=${build.dir}/test/results
+# Uncomment to specify the preferred debugger connection transport:
+#debug.transport=dt_socket
+debug.classpath=\
+    ${run.classpath}
+debug.test.classpath=\
+    ${run.test.classpath}
+# Files in build.classes.dir which should be excluded from distribution jar
+dist.archive.excludes=
+# This directory is removed when the project is cleaned:
 dist.dir=dist
 dist.jar=${dist.dir}/OJDBC.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.hamcrest-all-1.3.jar=D:\\Documents\\Job\\testing\\hamcrest-all-1.3.jar
+file.reference.hamcrest-all-1.3.jar=D:\\METRO DATA\\Bootcamp\\Tugas_6\\hamcrest-all-1.3.jar
+file.reference.hamcrest-all-1.3.jar-1=C:\\Users\\HENSTECH\\Downloads\\hamcrest-all-1.3.jar
+file.reference.hamcrest-all-1.3.jar-2=D:\\Bootcamp Mii\\hamcrest-all-1.3.jar
 file.reference.hamcrest-all-1.3.zip=F:\\Kerja MII\\Java Class\\hamcrest-all-1.3.zip
-file.reference.junit-4.13.jar=D:\\Documents\\Job\\testing\\junit-4.13.jar
+file.reference.junit-4.13.jar=D:\\METRO DATA\\Bootcamp\\Tugas_6\\junit-4.13.jar
+file.reference.junit-4.13.jar-1=C:\\Users\\HENSTECH\\Downloads\\junit-4.13.jar
+file.reference.junit-4.13.jar-2=D:\\Bootcamp Mii\\junit-4.13.jar
 file.reference.junit-4.13.zip=F:\\Kerja MII\\Java Class\\junit-4.13.zip
 file.reference.junit-4.13__1_.jar=E:\\program\\Master Bootcamp - Java\\junit-4.13 (1).jar
 file.reference.ojdbc7.jar=F:\\Kerja MII\\ojdbc7.jar
-file.reference.ojdbc7.jar-1=D:\\Documents\\Job\\_bootcamp 33\\_java\\ojdbc7.jar
+file.reference.ojdbc7.jar-1=D:\\METRO DATA\\Bootcamp\\Tugas_6\\ojdbc7.jar
+file.reference.ojdbc7.jar-2=E:\\kuliah\\semester kerja\\MII\\ojdbc7.jar
+file.reference.ojdbc7.jar-3=D:\\Bootcamp Mii\\ojdbc7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.ojdbc7.jar}:\
     ${file.reference.junit-4.13.zip}:\
     ${file.reference.hamcrest-all-1.3.zip}:\
-    ${file.reference.ojdbc7.jar-1}
+    ${file.reference.junit-4.13.jar}:\
+    ${file.reference.ojdbc7.jar-1}:\
+    ${file.reference.hamcrest-all-1.3.jar}:\
+    ${file.reference.hamcrest-all-1.3.jar-1}:\
+    ${file.reference.junit-4.13.jar-1}:\
+    ${file.reference.ojdbc7.jar-2}:\
+    ${file.reference.hamcrest-all-1.3.jar-2}:\
+    ${file.reference.junit-4.13.jar-2}:\
+    ${file.reference.ojdbc7.jar-3}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,17 +62,10 @@ javac.external.vm=true
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
-junit.selected.version=4
-file.reference.junit-4.13.zip=F\:\\Kerja MII\\Java Class\\junit-4.13.zip
-debug.classpath=${run.classpath}
-run.jvmargs=
-build.generated.dir=${build.dir}/generated
-jar.compress=false
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${file.reference.hamcrest-all-1.3.jar}:\
-    ${file.reference.junit-4.13.jar}
+    ${build.classes.dir}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -76,24 +75,25 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
-annotation.processing.run.all.processors=true
-meta.inf.dir=${src.dir}/META-INF
-manifest.file=manifest.mf
-annotation.processing.enabled=true
-file.reference.ojdbc7.jar=F\:\\Kerja MII\\ojdbc7.jar
-dist.javadoc.dir=${dist.dir}/javadoc
-src.dir=src
-mkdist.disabled=false
-javac.classpath=\
-    ${file.reference.ojdbc7.jar}:\
-    ${file.reference.junit-4.13.zip}:\
-    ${file.reference.hamcrest-all-1.3.zip}:\
-    ${file.reference.hamcrest-all-1.3.jar-1}:\
-    ${file.reference.junit-4.13.jar-1}:\
-    ${file.reference.ojdbc7.jar-2}
-annotation.processing.enabled.in.editor=false
-file.reference.hamcrest-all-1.3.zip=F\:\\Kerja MII\\Java Class\\hamcrest-all-1.3.zip
-build.generated.sources.dir=${build.dir}/generated-sources
+javadoc.splitindex=true
+javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-javadoc.notree=false
+main.class=tools.OJDBC
+manifest.file=manifest.mf
+meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
+platform.active=default_platform
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
+# Space-separated list of JVM arguments used when running the project.
+# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
+# To set system properties for unit tests define test-sys-prop.name=value:
+run.jvmargs=
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
+source.encoding=UTF-8
+src.dir=src
+test.src.dir=test
