--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,13 +33,15 @@ file.reference.junit-4.13.jar=D:\\Documents\\Job\\testing\\junit-4.13.jar
 file.reference.junit-4.13.zip=F:\\Kerja MII\\Java Class\\junit-4.13.zip
 file.reference.ojdbc7.jar=F:\\Kerja MII\\ojdbc7.jar
 file.reference.ojdbc7.jar-1=D:\\Documents\\Job\\_bootcamp 33\\_java\\ojdbc7.jar
+file.reference.PlaceHolder.jar=C:\\Users\\FIKRI-PC\\Downloads\\PlaceHolder.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.ojdbc7.jar}:\
     ${file.reference.junit-4.13.zip}:\
     ${file.reference.hamcrest-all-1.3.zip}:\
-    ${file.reference.ojdbc7.jar-1}
+    ${file.reference.ojdbc7.jar-1}:\
+    ${file.reference.PlaceHolder.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
