--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,12 +28,16 @@ dist.jar=${dist.dir}/OJDBC.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.hamcrest-all-1.3.jar=D:\\Documents\\Job\\testing\\hamcrest-all-1.3.jar
+file.reference.hamcrest-all-1.3.jar-1=D:\\METRO DATA\\Bootcamp\\Tugas_6\\hamcrest-all-1.3.jar
 file.reference.hamcrest-all-1.3.zip=F:\\Kerja MII\\Java Class\\hamcrest-all-1.3.zip
 file.reference.junit-4.13.jar=D:\\Documents\\Job\\testing\\junit-4.13.jar
+file.reference.junit-4.13.jar-1=D:\\METRO DATA\\Bootcamp\\Tugas_6\\junit-4.13.jar
 file.reference.junit-4.13.zip=F:\\Kerja MII\\Java Class\\junit-4.13.zip
 file.reference.ojdbc7.jar=F:\\Kerja MII\\ojdbc7.jar
 file.reference.ojdbc7.jar-1=D:\\Documents\\Job\\_bootcamp 33\\_java\\ojdbc7.jar
+file.reference.ojdbc7.jar-2=D:\\METRO DATA\\Bootcamp\\Tugas_6\\ojdbc7.jar
 file.reference.PlaceHolder.jar=C:\\Users\\FIKRI-PC\\Downloads\\PlaceHolder.jar
+file.reference.PlaceHolder.jar-1=D:\\METRO DATA\\Bootcamp\\Tugas_6\\PlaceHolder.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -41,7 +45,11 @@ javac.classpath=\
     ${file.reference.junit-4.13.zip}:\
     ${file.reference.hamcrest-all-1.3.zip}:\
     ${file.reference.ojdbc7.jar-1}:\
-    ${file.reference.PlaceHolder.jar}
+    ${file.reference.PlaceHolder.jar}:\
+    ${file.reference.PlaceHolder.jar-1}:\
+    ${file.reference.hamcrest-all-1.3.jar-1}:\
+    ${file.reference.junit-4.13.jar-1}:\
+    ${file.reference.ojdbc7.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
