jasper report , belum jinternalframe

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=OJDBC
+application.vendor=TUF FX504
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,11 +27,19 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/OJDBC.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.commons-beanutils-1.8.0.jar=D:\\Master Bootcamp - Java\\jasper library\\commons-beanutils-1.8.0.jar
+file.reference.commons-collections-3.1.jar=D:\\Master Bootcamp - Java\\jasper library\\commons-collections-3.1.jar
+file.reference.commons-digester-1.7.jar=D:\\Master Bootcamp - Java\\jasper library\\commons-digester-1.7.jar
+file.reference.commons-logging-1.1.jar=D:\\Master Bootcamp - Java\\jasper library\\commons-logging-1.1.jar
 file.reference.DateChooser.jar=D:\\Master Bootcamp - Java\\DateChooser.jar
+file.reference.groovy-all-2.1.3.jar=D:\\Master Bootcamp - Java\\jasper library\\groovy-all-2.1.3.jar
 file.reference.hamcrest-all-1.3.jar=D:\\Documents\\Job\\testing\\hamcrest-all-1.3.jar
 file.reference.hamcrest-all-1.3.jar-1=D:\\Master Bootcamp - Java\\hamcrest-all-1.3.jar
 file.reference.hamcrest-all-1.3.zip=F:\\Kerja MII\\Java Class\\hamcrest-all-1.3.zip
+file.reference.itext-2.1.7.jar=D:\\Master Bootcamp - Java\\jasper library\\itext-2.1.7.jar
+file.reference.jasperreports-6.2.0.jar=D:\\Master Bootcamp - Java\\jasper library\\jasperreports-6.2.0.jar
 file.reference.jcalendar-1.4.jar=D:\\Master Bootcamp - Java\\jcalendar-1.4.jar
 file.reference.junit-4.13.jar=D:\\Documents\\Job\\testing\\junit-4.13.jar
 file.reference.junit-4.13.jar-1=D:\\Master Bootcamp - Java\\junit-4.13.jar
@@ -53,7 +62,14 @@ javac.classpath=\
     ${file.reference.hamcrest-all-1.3.jar-1}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.junit-4.13.jar-1}:\
-    ${file.reference.ojdbc7.jar-2}
+    ${file.reference.ojdbc7.jar-2}:\
+    ${file.reference.commons-beanutils-1.8.0.jar}:\
+    ${file.reference.commons-collections-3.1.jar}:\
+    ${file.reference.commons-digester-1.7.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.groovy-all-2.1.3.jar}:\
+    ${file.reference.itext-2.1.7.jar}:\
+    ${file.reference.jasperreports-6.2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
