--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,23 +30,34 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-beanutils-1.8.0.jar=D:\\INSTALLER\\MASTER\\jasper library\\commons-beanutils-1.8.0.jar
+file.reference.commons-beanutils-1.8.0.jar-1=E:\\kuliah\\semester kerja\\MII\\New Folder\\jasper library\\commons-beanutils-1.8.0.jar
 file.reference.commons-collections-3.1.jar=D:\\INSTALLER\\MASTER\\jasper library\\commons-collections-3.1.jar
+file.reference.commons-collections-3.1.jar-1=E:\\kuliah\\semester kerja\\MII\\New Folder\\jasper library\\commons-collections-3.1.jar
 file.reference.commons-digester-1.7.jar=D:\\INSTALLER\\MASTER\\jasper library\\commons-digester-1.7.jar
+file.reference.commons-digester-1.7.jar-1=E:\\kuliah\\semester kerja\\MII\\New Folder\\jasper library\\commons-digester-1.7.jar
 file.reference.commons-logging-1.1.jar=D:\\INSTALLER\\MASTER\\jasper library\\commons-logging-1.1.jar
+file.reference.commons-logging-1.1.jar-1=E:\\kuliah\\semester kerja\\MII\\New Folder\\jasper library\\commons-logging-1.1.jar
 file.reference.groovy-all-2.1.3.jar=D:\\INSTALLER\\MASTER\\jasper library\\groovy-all-2.1.3.jar
+file.reference.groovy-all-2.1.3.jar-1=E:\\kuliah\\semester kerja\\MII\\New Folder\\jasper library\\groovy-all-2.1.3.jar
 file.reference.hamcrest-all-1.3.jar=D:\\Documents\\Job\\testing\\hamcrest-all-1.3.jar
 file.reference.hamcrest-all-1.3.jar-1=D:\\METRO DATA\\Bootcamp\\Tugas_6\\hamcrest-all-1.3.jar
+file.reference.hamcrest-all-1.3.jar-2=E:\\kuliah\\semester kerja\\MII\\New Folder\\jasper library\\hamcrest-all-1.3.jar
 file.reference.hamcrest-all-1.3.zip=F:\\Kerja MII\\Java Class\\hamcrest-all-1.3.zip
 file.reference.itext-2.1.7.jar=D:\\INSTALLER\\MASTER\\jasper library\\itext-2.1.7.jar
+file.reference.itext-2.1.7.jar-1=E:\\kuliah\\semester kerja\\MII\\New Folder\\jasper library\\itext-2.1.7.jar
 file.reference.jasperreports-6.2.0.jar=D:\\INSTALLER\\MASTER\\jasper library\\jasperreports-6.2.0.jar
+file.reference.jasperreports-6.2.0.jar-1=E:\\kuliah\\semester kerja\\MII\\New Folder\\jasper library\\jasperreports-6.2.0.jar
 file.reference.junit-4.13.jar=D:\\Documents\\Job\\testing\\junit-4.13.jar
 file.reference.junit-4.13.jar-1=D:\\METRO DATA\\Bootcamp\\Tugas_6\\junit-4.13.jar
+file.reference.junit-4.13.jar-2=E:\\kuliah\\semester kerja\\MII\\New Folder\\jasper library\\junit-4.13.jar
 file.reference.junit-4.13.zip=F:\\Kerja MII\\Java Class\\junit-4.13.zip
 file.reference.ojdbc7.jar=F:\\Kerja MII\\ojdbc7.jar
 file.reference.ojdbc7.jar-1=D:\\Documents\\Job\\_bootcamp 33\\_java\\ojdbc7.jar
 file.reference.ojdbc7.jar-2=D:\\METRO DATA\\Bootcamp\\Tugas_6\\ojdbc7.jar
+file.reference.ojdbc7.jar-3=E:\\kuliah\\semester kerja\\MII\\New Folder\\jasper library\\ojdbc7.jar
 file.reference.PlaceHolder.jar=C:\\Users\\FIKRI-PC\\Downloads\\PlaceHolder.jar
 file.reference.PlaceHolder.jar-1=D:\\METRO DATA\\Bootcamp\\Tugas_6\\PlaceHolder.jar
+file.reference.PlaceHolder.jar-2=E:\\kuliah\\semester kerja\\MII\\New Folder\\jasper library\\PlaceHolder.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -65,7 +76,18 @@ javac.classpath=\
     ${file.reference.commons-logging-1.1.jar}:\
     ${file.reference.groovy-all-2.1.3.jar}:\
     ${file.reference.itext-2.1.7.jar}:\
-    ${file.reference.jasperreports-6.2.0.jar}
+    ${file.reference.jasperreports-6.2.0.jar}:\
+    ${file.reference.PlaceHolder.jar-2}:\
+    ${file.reference.commons-beanutils-1.8.0.jar-1}:\
+    ${file.reference.commons-collections-3.1.jar-1}:\
+    ${file.reference.commons-digester-1.7.jar-1}:\
+    ${file.reference.commons-logging-1.1.jar-1}:\
+    ${file.reference.groovy-all-2.1.3.jar-1}:\
+    ${file.reference.hamcrest-all-1.3.jar-2}:\
+    ${file.reference.itext-2.1.7.jar-1}:\
+    ${file.reference.jasperreports-6.2.0.jar-1}:\
+    ${file.reference.junit-4.13.jar-2}:\
+    ${file.reference.ojdbc7.jar-3}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
