add result clean

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,22 +31,29 @@ endorsed.classpath=
 excludes=
 file.reference.commons-beanutils-1.8.0.jar=D:\\INSTALLER\\MASTER\\jasper library\\commons-beanutils-1.8.0.jar
 file.reference.commons-beanutils-1.8.0.jar-1=E:\\kuliah\\semester kerja\\MII\\New Folder\\jasper library\\commons-beanutils-1.8.0.jar
+file.reference.commons-beanutils-1.8.0.jar-2=F:\\Kerja MII\\jesper\\commons-beanutils-1.8.0.jar
 file.reference.commons-collections-3.1.jar=D:\\INSTALLER\\MASTER\\jasper library\\commons-collections-3.1.jar
 file.reference.commons-collections-3.1.jar-1=E:\\kuliah\\semester kerja\\MII\\New Folder\\jasper library\\commons-collections-3.1.jar
+file.reference.commons-collections-3.1.jar-2=F:\\Kerja MII\\jesper\\commons-collections-3.1.jar
 file.reference.commons-digester-1.7.jar=D:\\INSTALLER\\MASTER\\jasper library\\commons-digester-1.7.jar
 file.reference.commons-digester-1.7.jar-1=E:\\kuliah\\semester kerja\\MII\\New Folder\\jasper library\\commons-digester-1.7.jar
+file.reference.commons-digester-1.7.jar-2=F:\\Kerja MII\\jesper\\commons-digester-1.7.jar
 file.reference.commons-logging-1.1.jar=D:\\INSTALLER\\MASTER\\jasper library\\commons-logging-1.1.jar
 file.reference.commons-logging-1.1.jar-1=E:\\kuliah\\semester kerja\\MII\\New Folder\\jasper library\\commons-logging-1.1.jar
+file.reference.commons-logging-1.1.jar-2=F:\\Kerja MII\\jesper\\commons-logging-1.1.jar
 file.reference.groovy-all-2.1.3.jar=D:\\INSTALLER\\MASTER\\jasper library\\groovy-all-2.1.3.jar
 file.reference.groovy-all-2.1.3.jar-1=E:\\kuliah\\semester kerja\\MII\\New Folder\\jasper library\\groovy-all-2.1.3.jar
+file.reference.groovy-all-2.1.3.jar-2=F:\\Kerja MII\\jesper\\groovy-all-2.1.3.jar
 file.reference.hamcrest-all-1.3.jar=D:\\Documents\\Job\\testing\\hamcrest-all-1.3.jar
 file.reference.hamcrest-all-1.3.jar-1=D:\\METRO DATA\\Bootcamp\\Tugas_6\\hamcrest-all-1.3.jar
 file.reference.hamcrest-all-1.3.jar-2=E:\\kuliah\\semester kerja\\MII\\New Folder\\jasper library\\hamcrest-all-1.3.jar
 file.reference.hamcrest-all-1.3.zip=F:\\Kerja MII\\Java Class\\hamcrest-all-1.3.zip
 file.reference.itext-2.1.7.jar=D:\\INSTALLER\\MASTER\\jasper library\\itext-2.1.7.jar
 file.reference.itext-2.1.7.jar-1=E:\\kuliah\\semester kerja\\MII\\New Folder\\jasper library\\itext-2.1.7.jar
+file.reference.itext-2.1.7.jar-2=F:\\Kerja MII\\jesper\\itext-2.1.7.jar
 file.reference.jasperreports-6.2.0.jar=D:\\INSTALLER\\MASTER\\jasper library\\jasperreports-6.2.0.jar
 file.reference.jasperreports-6.2.0.jar-1=E:\\kuliah\\semester kerja\\MII\\New Folder\\jasper library\\jasperreports-6.2.0.jar
+file.reference.jasperreports-6.2.0.jar-2=F:\\Kerja MII\\jesper\\jasperreports-6.2.0.jar
 file.reference.junit-4.13.jar=D:\\Documents\\Job\\testing\\junit-4.13.jar
 file.reference.junit-4.13.jar-1=D:\\METRO DATA\\Bootcamp\\Tugas_6\\junit-4.13.jar
 file.reference.junit-4.13.jar-2=E:\\kuliah\\semester kerja\\MII\\New Folder\\jasper library\\junit-4.13.jar
@@ -87,7 +94,14 @@ javac.classpath=\
     ${file.reference.itext-2.1.7.jar-1}:\
     ${file.reference.jasperreports-6.2.0.jar-1}:\
     ${file.reference.junit-4.13.jar-2}:\
-    ${file.reference.ojdbc7.jar-3}
+    ${file.reference.ojdbc7.jar-3}:\
+    ${file.reference.commons-beanutils-1.8.0.jar-2}:\
+    ${file.reference.commons-collections-3.1.jar-2}:\
+    ${file.reference.commons-digester-1.7.jar-2}:\
+    ${file.reference.commons-logging-1.1.jar-2}:\
+    ${file.reference.groovy-all-2.1.3.jar-2}:\
+    ${file.reference.itext-2.1.7.jar-2}:\
+    ${file.reference.jasperreports-6.2.0.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
